= New Features =

== 1.9 release (in progress) == #release-1.9

=== Library ===

==== Major changes ====
 * Integrate otlhs module
 * New function API

==== New classes ====
 * SpaceFillingPhiP, SpaceFillingMinDist, SpaceFillingC2
 * LinearProfile, GeometricProfile
 * MonteCarloLHS, SimulatedAnnealingLHS
 * LHSResult
 * MultiStart
 * MethodOfMomentsFactory
 * AnalyticalFunction, AggregatedFunction, ComposedFunction, DatabaseFunction, DualLinearCombinationFunction, LinearCombinationFunction, LinearFunction, ParametricFunction

==== API changes ====
  * Removed deprecated SLSQP, LBFGS and NelderMead classes
  * Removed deprecated QuadraticCumul class
  * Removed classes UserDefinedPair, HistogramPair
  * Removed deprecated method WeightedExperiment::getWeight
  * Removed deprecated method DistributionFactory::build(NumericalSample, CovarianceMatrix&)
  * Removed deprecated distributions alternative parameters constructors, accessors
  * Added a generic implementation of the computeLogPDFGradient() method in the DistributionImplementation class.
  * Allow Box to support bounds
  * Deprecated LinearNumericalMathFunction in favor of LinearFunction

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * #729 (KDTree & save)

== 1.8 release (2016-11-18) == #release-1.8

=== Library ===

==== Major changes ====
 * Changed the default orthonormalization algorithm of StandardDistributionPolynomialFactory from GramSchmidtAlgorithm to AdaptiveStieltjesAlgorithm
 * New api for sensitivity analysis
 * New methods to compute confidence regions in Distribution

==== New classes ====
 * SubsetSampling
 * AdaptiveDirectionalSampling
 * KarhunenLoeveQuadratureFactory
 * SobolIndicesAlgorithm
 * SaltelliSensitivityAlgorithm
 * MartinezSensitivityAlgorithm
 * JansenSensitivityAlgorithm
 * MauntzKucherenkoSensitivityAlgorithm
 * SoizeGhanemFactory
 * LevelSetMesher
 * HistogramPolynomialFactory
 * ChebychevFactory

==== API changes ====