@@ -1,2 +1,3 @@
 Remove deprecated LAR class in 1.10 version
 Remove deprecated LinearNumericalMathFunction in 1.10 version
+Remove deprecated QuadraticNumericalMathFunction in 1.10 version
