@@ -28,7 +28,7 @@ ot_add_source_file (NumericalMathFunctionImplementation.cxx)
 ot_add_source_file (ComposedNumericalMathFunction.cxx)
 ot_add_source_file (LinearFunction.cxx)
 ot_add_source_file (IdentityFunction.cxx)
-ot_add_source_file (QuadraticNumericalMathFunction.cxx)
+ot_add_source_file (QuadraticFunction.cxx)
 ot_add_source_file (NumericalMathEvaluationImplementation.cxx)
 ot_add_source_file (NumericalMathGradientImplementation.cxx)
 ot_add_source_file (NumericalMathHessianImplementation.cxx)
@@ -148,7 +148,7 @@ ot_install_header_file (NoNumericalMathEvaluationImplementation.hxx)
 ot_install_header_file (ConstantNumericalMathHessianImplementation.hxx)
 ot_install_header_file (LinearFunction.hxx)
 ot_install_header_file (IdentityFunction.hxx)
-ot_install_header_file (QuadraticNumericalMathFunction.hxx)
+ot_install_header_file (QuadraticFunction.hxx)
 ot_install_header_file (UniVariatePolynomial.hxx)
 ot_install_header_file (UniVariatePolynomialImplementation.hxx)
 ot_install_header_file (UniVariateFunction.hxx)
