@@ -19,7 +19,7 @@
  *
  */
 #include "openturns/QuadraticTaylor.hxx"
-#include "openturns/QuadraticNumericalMathFunction.hxx"
+#include "openturns/QuadraticFunction.hxx"
 
 BEGIN_NAMESPACE_OPENTURNS
 
@@ -73,7 +73,7 @@ void QuadraticTaylor::run()
   linear_ = inputFunction_.gradient(center_);
   quadratic_ = inputFunction_.hessian(center_);
   /* Build the several implementations and set it into the response surface */
-  responseSurface_ = QuadraticNumericalMathFunction(center_, constant_, linear_, quadratic_);
+  responseSurface_ = QuadraticFunction(center_, constant_, linear_, quadratic_);
   responseSurface_.setDescription(inputFunction_.getDescription());
 }
 
