@@ -146,6 +146,7 @@ ot_pyinstallcheck_test (LinearCombinationGradientImplementation_std)
 ot_pyinstallcheck_test (LinearCombinationHessianImplementation_std)
 ot_pyinstallcheck_test (PiecewiseLinearEvaluationImplementation_std)
 ot_pyinstallcheck_test (PiecewiseHermiteEvaluationImplementation_std)
+ot_pyinstallcheck_test (QuadraticFunction_std)
 ot_pyinstallcheck_test (QuadraticNumericalMathEvaluationImplementation_std)
 ot_pyinstallcheck_test (LinearNumericalMathGradientImplementation_std)
 ot_pyinstallcheck_test (AggregatedFunction_std)
