@@ -1,0 +1,4 @@
+myFunction= class=QuadraticFunction name=Unnamed implementation=class=NumericalMathFunctionImplementation name=Unnamed description=[x0,x1,x2,y0,y1] evaluationImplementation=class=QuadraticNumericalMathEvaluationImplementation name=Unnamed center=class=NumericalPoint name=Unnamed dimension=3 values=[-1,0.5,1] constant=class=NumericalPoint name=Unnamed dimension=2 values=[-1,2] linear=class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=3 columns=2 values=[1,2,3,4,5,6] quadratic=class=SymmetricTensor implementation=class=TensorImplementation name=Unnamed rows=3 columns=3 sheets=2 values=[7,8,9,0,10,11,0,0,12,-7,-8,-9,0,-10,-11,0,0,-12] gradientImplementation=class=LinearNumericalMathGradientImplementation name=Unnamed center=class=NumericalPoint name=Unnamed dimension=3 values=[-1,0.5,1] constant=class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=3 columns=2 values=[1,2,3,4,5,6] linear=class=SymmetricTensor implementation=class=TensorImplementation name=Unnamed rows=3 columns=3 sheets=2 values=[7,8,9,0,10,11,0,0,12,-7,-8,-9,0,-10,-11,0,0,-12] hessianImplementation=class=ConstantNumericalMathHessianImplementation name=Unnamed constant=class=SymmetricTensor implementation=class=TensorImplementation name=Unnamed rows=3 columns=3 sheets=2 values=[7,8,9,0,10,11,0,0,12,-7,-8,-9,0,-10,-11,0,0,-12]
+Unnamed (  class=NumericalPoint name=Unnamed dimension=3 values=[7,8,9]  ) =  class=NumericalPoint name=Unnamed dimension=2 values=[2651.25,-2485.75]
+Unnamed .gradient(  class=NumericalPoint name=Unnamed dimension=3 values=[7,8,9]  ) =  class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=3 columns=2 values=[189,229,253.5,-184,-222,-244.5]
+Unnamed .hessian(  class=NumericalPoint name=Unnamed dimension=3 values=[7,8,9]  ) =  class=SymmetricTensor implementation=class=TensorImplementation name=Unnamed rows=3 columns=3 sheets=2 values=[7,8,9,0,10,11,0,0,12,-7,-8,-9,0,-10,-11,0,0,-12]
